Implement Github Actions caching (#170)
* WIP -- begin implementing gh actions caching

* WIP

* WIP

* run unit tests in dobi

* WIP workflows

* update workflows for new jobs

* add caching to build workflow

* fix workflow

* yaml syntax

* fix build workflow

* chicken or egg?

* copy pasta

* apparently artifacts are per-workflow

* remove upload/download

* fix build workflow

* another fix

Co-authored-by: inickles-grapl <64668260+inickles-grapl@users.noreply.github.com>

--- a/.github/workflows/grapl-build.yml
+++ b/.github/workflows/grapl-build.yml
@@ -8,7 +8,7 @@ on:
       - master
 
 jobs:
-  grapl-cargo-audit:
+  cargo-audit:
     runs-on: ubuntu-latest
 
     steps:
@@ -19,7 +19,7 @@ jobs:
           docker build -f .github/etc/cargo-audit/Dockerfile -t grapl/grapl-cargo-audit:latest src/rust
           docker run -t grapl/grapl-cargo-audit:latest cargo audit
 
-  grapl-rust-build:
+  rust-unit-tests:
     runs-on: ubuntu-latest
 
     steps:
@@ -30,12 +30,15 @@ jobs:
           wget https://github.com/dnephin/dobi/releases/download/v0.13.0/dobi-linux
           chmod +x dobi-linux
 
-      - name: Build Grapl Rust services
+      - name: Build Rust services
         run: |
           GRAPL_RELEASE_TARGET=debug TAG=latest ./dobi-linux --no-bind-mount rust
-          docker system prune -f
 
-  grapl-python-build:
+      - name: Rust unit tests
+        run: |
+          GRAPL_RELEASE_TARGET=debug TAG=latest ./dobi-linux --no-bind-mount rust-unit-tests
+
+  python-unit-tests:
     runs-on: ubuntu-latest
 
     steps:
@@ -46,12 +49,15 @@ jobs:
           wget https://github.com/dnephin/dobi/releases/download/v0.13.0/dobi-linux
           chmod +x dobi-linux
 
-      - name: Build Grapl Python services
+      - name: Build Python services
         run: |
           GRAPL_RELEASE_TARGET=debug TAG=latest ./dobi-linux --no-bind-mount python
-          docker system prune -f
 
-  grapl-js-build:
+      - name: Python unit tests
+        run: |
+          GRAPL_RELEASE_TARGET=debug TAG=latest ./dobi-linux --no-bind-mount python-unit-tests
+
+  js-unit-tests:
     runs-on: ubuntu-latest
 
     steps:
@@ -62,14 +68,16 @@ jobs:
           wget https://github.com/dnephin/dobi/releases/download/v0.13.0/dobi-linux
           chmod +x dobi-linux
 
-      - name: Build Grapl JS services
+      - name: Build JS services
         run: |
           GRAPL_RELEASE_TARGET=debug TAG=latest ./dobi-linux --no-bind-mount js
-          docker system prune -f
 
-  grapl-rust-integration-tests:
+      - name: JS unit tests
+        run: |
+          GRAPL_RELEASE_TARGET=debug TAG=latest ./dobi-linux --no-bind-mount js-unit-tests
+
+  integration-tests:
     runs-on: ubuntu-latest
-    needs: [grapl-rust-build, grapl-python-build, grapl-js-build]
 
     steps:
       - uses: actions/checkout@v2
@@ -79,26 +87,10 @@ jobs:
           wget https://github.com/dnephin/dobi/releases/download/v0.13.0/dobi-linux
           chmod +x dobi-linux
 
-      - name: Run Grapl integration tests
+      - name: Build Grapl
         run: |
-          GRAPL_RELEASE_TARGET=debug TAG=latest ./dobi-linux --no-bind-mount rust-integration
-          GRAPL_RELEASE_TARGET=debug TAG=latest ./dobi-linux --no-bind-mount clean-rust-build
-          docker system prune -f
+          GRAPL_RELEASE_TARGET=debug TAG=latest ./dobi-linux --no-bind-mount build
 
-  grapl-python-integration-tests:
-    runs-on: ubuntu-latest
-    needs: [grapl-rust-build, grapl-python-build, grapl-js-build]
-
-    steps:
-      - uses: actions/checkout@v2
-
-      - name: Install dobi
+      - name: Run integration tests
         run: |
-          wget https://github.com/dnephin/dobi/releases/download/v0.13.0/dobi-linux
-          chmod +x dobi-linux
-
-      - name: Run Grapl integration tests
-        run: |
-          GRAPL_RELEASE_TARGET=debug TAG=latest ./dobi-linux --no-bind-mount python-integration
-          GRAPL_RELEASE_TARGET=debug TAG=latest ./dobi-linux --no-bind-mount clean-python-build
-          docker system prune -f
+          GRAPL_RELEASE_TARGET=debug TAG=latest ./dobi-linux --no-bind-mount integration-tests
