--- a/.github/workflows/grapl-build.yml
+++ b/.github/workflows/grapl-build.yml
@@ -57,24 +57,24 @@ jobs:
         run: |
           GRAPL_RELEASE_TARGET=debug TAG=latest ./dobi-linux --no-bind-mount python-unit-tests
 
-          # js-unit-tests:
-          #   runs-on: ubuntu-latest
+  js-unit-tests:
+    runs-on: ubuntu-latest
 
-          #   steps:
-          #     - uses: actions/checkout@v2
+    steps:
+      - uses: actions/checkout@v2
 
-          #     - name: Install dobi
-          #       run: |
-          #         wget https://github.com/dnephin/dobi/releases/download/v0.13.0/dobi-linux
-          #         chmod +x dobi-linux
+      - name: Install dobi
+        run: |
+          wget https://github.com/dnephin/dobi/releases/download/v0.13.0/dobi-linux
+          chmod +x dobi-linux
 
-          #     - name: Build JS services
-          #       run: |
-          #         GRAPL_RELEASE_TARGET=debug TAG=latest ./dobi-linux --no-bind-mount js
+      - name: Build JS services
+        run: |
+          GRAPL_RELEASE_TARGET=debug TAG=latest ./dobi-linux --no-bind-mount js
 
-          #     - name: JS unit tests
-          #       run: |
-          #         GRAPL_RELEASE_TARGET=debug TAG=latest ./dobi-linux --no-bind-mount js-unit-tests
+      - name: JS unit tests
+        run: |
+          GRAPL_RELEASE_TARGET=debug TAG=latest ./dobi-linux --no-bind-mount js-unit-tests
 
   integration-tests:
     runs-on: ubuntu-latest
