--- a/src/rust/graph-merger/Cargo.toml
+++ b/src/rust/graph-merger/Cargo.toml
@@ -44,3 +44,6 @@ tokio-compat = "0.1.*"
 tokio = { version = "0.2.*", features = ["sync", "rt-core", "macros", "time", "rt-threaded"] }
 chrono = "0.4.11"
 rusoto_credential = "0.43.0"
+rusoto_dynamodb = {version="0.43.0", default_features = false, features=["rustls"]}
+serde_dynamodb = {version="0.5.0", default_features = false, features=["rustls"]}
+
