--- a/.github/workflows/grapl-lint.yml
+++ b/.github/workflows/grapl-lint.yml
@@ -109,3 +109,18 @@ jobs:
                 true
           fi
           deactivate
+
+      - name: Check whether grapl-common version has been bumped
+        run: |
+          . venv/bin/activate
+          if [[ "$CHANNEL" == "latest" ]]; then
+              python etc/build_scripts/check_pypi_version.py \
+                grapl-common \
+                $(cat src/python/grapl-common/VERSION)
+          else
+              python etc/build_scripts/check_pypi_version.py \
+                grapl-common \
+                $(cat src/python/grapl-common/VERSION) \
+                true
+          fi
+          deactivate
