--- a/.github/workflows/grapl-release.yml
+++ b/.github/workflows/grapl-release.yml
@@ -89,6 +89,21 @@ jobs:
           fi
           deactivate
 
+      - name: Check whether grapl-common version has been bumped
+        run: |
+          . venv/bin/activate
+          if [[ "$CHANNEL" == "latest" ]]; then
+              python etc/build_scripts/check_pypi_version.py \
+                grapl-common \
+                $(cat src/python/grapl-common/VERSION)
+          else
+              python etc/build_scripts/check_pypi_version.py \
+                grapl-common \
+                $(cat src/python/grapl-common/VERSION) \
+                true
+          fi
+          deactivate
+
   release-rust-services:
     runs-on: ubuntu-latest
     needs: [unit-tests, integration-tests, check-pypi]
