Remove the extend_self methods

--- a/src/python/grapl_analyzerlib/pytype.cfg
+++ b/src/python/grapl_analyzerlib/pytype.cfg
@@ -48,7 +48,7 @@ check_variable_types = False
 disable =
     pyi-error
 
-# Don't report errors.
+# Report errors.
 report_errors = True
 
 # Experimental: Infer precise return types even for invalid function calls.
