Introduce grapl-observability package in rust

--- a/src/rust/Cargo.toml
+++ b/src/rust/Cargo.toml
@@ -8,6 +8,7 @@ members = [
     "./graph-generator-lib",
     "./graph-merger",
     "./grapl-config",
+    "./grapl-observability",
     "./node-identifier",
-    "./sysmon-subgraph-generator"
+    "./sysmon-subgraph-generator",
 ]
