--- a/src/rust/grapl-observability/Cargo.toml
+++ b/src/rust/grapl-observability/Cargo.toml
@@ -1,9 +1,9 @@
 [package]
 name = "grapl-observability"
 version = "0.0.1"
-authors = ["Insanitybit <insanitybit@gmail.com>"]
+authors = ["Max Wittek <wimax@graplsecurity.com>"]
 edition = "2018"
-description = "Metrics and logging support for Grapl"
+description = "Metrics and logging tooling for Grapl"
 license = "Apache-2.0"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
@@ -12,3 +12,4 @@ log = "0.4.*"
 regex = "1.1.0"
 lazy_static = "1.2.0"
 failure = "0.1.*"
+itertools = "0.9.*"
