--- a/src/rust/sysmon-subgraph-generator/Cargo.toml
+++ b/src/rust/sysmon-subgraph-generator/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2018"
 [dependencies]
 graph-descriptions = {package="grapl-graph-descriptions", path="../graph-descriptions", version="*"}
 grapl-config = {path = "../grapl-config", version="*"}
+grapl-observe = {path = "../grapl-observe", version="*"}
 
 sqs-lambda = "0.20.*"
 serde = "1.0.110"
