CDK framework for services to forward their MONITORING| logs to another lambda

--- a/src/js/grapl-cdk/package.json
+++ b/src/js/grapl-cdk/package.json
@@ -31,6 +31,7 @@
     "@aws-cdk/aws-elasticache": "1.47.0",
     "@aws-cdk/aws-events-targets": "1.47.0",
     "@aws-cdk/aws-iam": "1.47.0",
+    "@aws-cdk/aws-logs-destinations": "1.47.0",
     "@aws-cdk/aws-lambda": "1.47.0",
     "@aws-cdk/aws-lambda-event-sources": "1.47.0",
     "@aws-cdk/aws-s3": "1.47.0",
