--- a/src/js/grapl-cdk/package.json
+++ b/src/js/grapl-cdk/package.json
@@ -1,52 +1,62 @@
 {
-    "name": "grapl-cdk",
-    "version": "0.1.0",
-    "bin": {
-        "grapl-cdk": "bin/grapl-cdk.js"
-    },
-    "scripts": {
-        "build": "tsc",
-        "watch": "tsc -w",
-        "test": "jest",
-        "cdk": "cdk"
-    },
-    "devDependencies": {
-        "@aws-cdk/assert": "1.47.0",
-        "@types/jest": "26.0.x",
-        "@types/node": "14.0.x",
-        "@types/uuid": "7.0.x",
-        "aws-cdk": "1.47.0",
-        "jest": "26.0.x",
-        "ts-jest": "26.0.x",
-        "ts-node": "8.10.x",
-        "typescript": "~3.9.3"
-    },
-    "dependencies": {
-        "@aws-cdk/aws-apigateway": "1.47.0",
-        "@aws-cdk/aws-cloudformation": "1.47.0",
-        "@aws-cdk/aws-cloudwatch-actions": "1.47.0",
-        "@aws-cdk/aws-dynamodb": "1.47.0",
-        "@aws-cdk/aws-ec2": "1.47.0",
-        "@aws-cdk/aws-ecs": "1.47.0",
-        "@aws-cdk/aws-elasticache": "1.47.0",
-        "@aws-cdk/aws-events-targets": "1.47.0",
-        "@aws-cdk/aws-iam": "1.47.0",
-        "@aws-cdk/aws-lambda": "1.47.0",
-        "@aws-cdk/aws-lambda-event-sources": "1.47.0",
-        "@aws-cdk/aws-s3": "1.47.0",
-        "@aws-cdk/aws-s3-deployment": "1.47.0",
-        "@aws-cdk/aws-s3-notifications": "1.47.0",
-        "@aws-cdk/aws-sagemaker": "1.47.0",
-        "@aws-cdk/aws-secretsmanager": "1.47.0",
-        "@aws-cdk/aws-servicediscovery": "1.47.0",
-        "@aws-cdk/aws-sns": "1.47.0",
-        "@aws-cdk/aws-sns-subscriptions": "1.47.0",
-        "@aws-cdk/aws-sqs": "1.47.0",
-        "@aws-cdk/core": "1.47.0",
-        "@types/node-dir": "0.0.33",
-        "aws-sdk": "2.682.x",
-        "node-dir": "0.1.17",
-        "node-env-file": "0.1.8",
-        "source-map-support": "0.5.19"
-    }
+  "name": "grapl-cdk",
+  "version": "0.1.0",
+  "bin": {
+    "grapl-cdk": "bin/grapl-cdk.js"
+  },
+  "scripts": {
+    "build": "tsc",
+    "watch": "tsc -w",
+    "test": "jest",
+    "cdk": "cdk"
+  },
+  "devDependencies": {
+    "@aws-cdk/assert": "1.47.0",
+    "@types/jest": "26.0.x",
+    "@types/node": "14.0.x",
+    "@types/uuid": "7.0.x",
+    "aws-cdk": "1.47.0",
+    "jest": "26.0.x",
+    "ts-jest": "26.0.x",
+    "ts-node": "8.10.x",
+    "typescript": "~3.9.3"
+  },
+  "dependencies": {
+    "@aws-cdk/aws-apigateway": "1.47.0",
+    "@aws-cdk/aws-cloudformation": "1.47.0",
+    "@aws-cdk/aws-cloudwatch-actions": "1.47.0",
+    "@aws-cdk/aws-dynamodb": "1.47.0",
+    "@aws-cdk/aws-ec2": "1.47.0",
+    "@aws-cdk/aws-ecs": "1.47.0",
+    "@aws-cdk/aws-elasticache": "1.47.0",
+    "@aws-cdk/aws-events-targets": "1.47.0",
+    "@aws-cdk/aws-iam": "1.47.0",
+    "@aws-cdk/aws-logs-destinations": "1.47.0",
+    "@aws-cdk/aws-lambda": "1.47.0",
+    "@aws-cdk/aws-lambda-event-sources": "1.47.0",
+    "@aws-cdk/aws-s3": "1.47.0",
+    "@aws-cdk/aws-s3-deployment": "1.47.0",
+    "@aws-cdk/aws-s3-notifications": "1.47.0",
+    "@aws-cdk/aws-sagemaker": "1.47.0",
+    "@aws-cdk/aws-secretsmanager": "1.47.0",
+    "@aws-cdk/aws-servicediscovery": "1.47.0",
+    "@aws-cdk/aws-sns": "1.47.0",
+    "@aws-cdk/aws-sns-subscriptions": "1.47.0",
+    "@aws-cdk/aws-sqs": "1.47.0",
+    "@aws-cdk/core": "1.47.0",
+    "@types/node-dir": "0.0.33",
+    "aws-sdk": "2.682.x",
+    "node-dir": "0.1.17",
+    "node-env-file": "0.1.8",
+    "source-map-support": "0.5.19"
+  },
+  "description": "Here you will find the [AWS CDK](https://aws.amazon.com/cdk/) code for a Grapl deployment in AWS.",
+  "main": "jest.config.js",
+  "directories": {
+    "lib": "lib",
+    "test": "test"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
