initial version, takes stuff in

--- a/src/rust/Cargo.toml
+++ b/src/rust/Cargo.toml
@@ -9,6 +9,7 @@ members = [
     "./graph-merger",
     "./grapl-config",
     "./grapl-observe",
+    "./metric-forwarder",
     "./node-identifier",
     "./sysmon-subgraph-generator",
 ]
