--- a/src/rust/metric-forwarder/Cargo.toml
+++ b/src/rust/metric-forwarder/Cargo.toml
@@ -13,7 +13,8 @@ base64 = "0.10.1"
 flate2 = "1.0.6"
 lambda_runtime = "0.2.*"
 log = "0.4.6"
-rusoto_cloudwatch = "0.45.0"
+# dont need it yet + causes openssl issues
+# rusoto_cloudwatch = "0.43.0"
 serde_json = "1.0.53"
 thiserror = "1.0.20"
 tokio-compat = "0.1.*"
