--- a/src/rust/metric-forwarder/Cargo.toml
+++ b/src/rust/metric-forwarder/Cargo.toml
@@ -11,11 +11,14 @@ async-trait = "0.1.22"
 aws_lambda_events = "0.2.1"
 base64 = "0.10.1"
 flate2 = "1.0.6"
+futures = "0.3.*"
 lambda_runtime = "0.2.*"
 log = "0.4.6"
-# dont need it yet + causes openssl issues
-# rusoto_cloudwatch = "0.43.0"
+rayon = "1.0.3"
+rusoto_cloudwatch = { version="0.43.0", default_features = false, features=["rustls"] }
+rusoto_core = { version="0.43.0", default_features = false, features=["rustls"] }
 serde_json = "1.0.53"
+statsd-parser = "0.3.0"
 thiserror = "1.0.20"
 tokio-compat = "0.1.*"
 tokio = { version = "0.2.*", features = ["sync", "rt-core", "macros", "time", "rt-threaded"] }
