--- a/src/rust/graph-merger/Cargo.toml
+++ b/src/rust/graph-merger/Cargo.toml
@@ -8,13 +8,14 @@ edition = "2018"
 graph-descriptions = {package="grapl-graph-descriptions", path="../graph-descriptions", version="*"}
 grapl-config = {path="../grapl-config", version="*"}
 
+anyhow = "1.0.*"
 failure = "0.1.*"
 serde = "1.0.110"
 serde_json = "1.0.53"
 serde_derive = "1.0.110"
 log = "0.4.*"
 
-dgraph-rs = "0.2.*"
+dgraph-tonic = { version = "0.8", features = ["dgraph-1-1"] }
 grpc = "0.6.1"
 sqs-lambda = "0.20.*"
 
@@ -46,4 +47,3 @@ chrono = "0.4.11"
 rusoto_credential = "0.43.0"
 rusoto_dynamodb = {version="0.43.0", default_features = false, features=["rustls"]}
 serde_dynamodb = {version="0.5.0", default_features = false, features=["rustls"]}
-
