--- a/src/rust/metric-forwarder/Dockerfile
+++ b/src/rust/metric-forwarder/Dockerfile
@@ -1,4 +1,4 @@
-FROM alpine AS grapl-analyzer-dispatcher
+FROM alpine AS grapl-metric-forwarder
 RUN apk add --no-cache libgcc
 ARG release_target="debug"
 COPY --from=grapl/grapl-rust-src-build /home/grapl/target/x86_64-unknown-linux-musl/${release_target}/metric-forwarder /
