--- a/dobi.yaml
+++ b/dobi.yaml
@@ -413,7 +413,7 @@ job=run-node-identifier-integration-tests:
     - RUST_BACKTRACE=1
     - "BUCKET_PREFIX=local-grapl"
     - "IS_LOCAL=True"
-    - "MG_ALPHAS=grapl-master-graph-db:9080"
+    - "MG_ALPHAS=graphdb:9080"
     - "SOURCE_QUEUE_URL=http://sqs.us-east-1.amazonaws.com:9324/queue/grapl-node-identifier-retry-queue"
     - "GRAPH_MERGER_QUEUE_URL=http://sqs.us-east-1.amazonaws.com:9324/queue/grapl-graph-merger-queue"
     - STATIC_MAPPING_TABLE=local-grapl-static_mapping_table
@@ -447,7 +447,7 @@ job=run-grapl-analyzerlib-integration-tests:
     - GRAPL_LOG_LEVEL=INFO
     - "BUCKET_PREFIX=local-grapl"
     - "IS_LOCAL=True"
-    - "MG_ALPHAS=grapl-master-graph-db:9080"
+    - "MG_ALPHAS=graphdb:9080"
   depends:
     - integration-env
 
@@ -470,6 +470,8 @@ job=run-analyzer-deployer-integration-tests:
     - GRAPL_LOG_LEVEL=INFO
     - "BUCKET_PREFIX=local-grapl"
     - "IS_LOCAL=True"
+    - "ANALYZERS_TABLE=local-grapl-analyzers_table"
+    - GRPC_ENABLE_FORK_SUPPORT=1
   depends:
     - integration-env
 
