--- a/.github/workflows/grapl-release.yml
+++ b/.github/workflows/grapl-release.yml
@@ -168,6 +168,11 @@ jobs:
           rm ./bootstrap
           echo "::set-output name=analyzer-dispatcher::analyzer-dispatcher-$VERSION-$CHANNEL.zip"
 
+          cp dist/metric-forwarder ./bootstrap
+          zip -9 metric-forwarder-$VERSION-$CHANNEL.zip ./bootstrap
+          rm ./bootstrap
+          echo "::set-output name=metric-forwarder::metric-forwarder-$VERSION-$CHANNEL.zip"
+
       - name: Log in to Docker registry
         run: |
           echo "${{ secrets.DOCKERHUB_TOKEN }}" | docker login --username grapl --password-stdin
@@ -182,6 +187,7 @@ jobs:
           docker push grapl/grapl-node-identifier-retry-handler:$VERSION-$CHANNEL
           docker push grapl/grapl-graph-merger:$VERSION-$CHANNEL
           docker push grapl/grapl-analyzer-dispatcher:$VERSION-$CHANNEL
+          docker push grapl/grapl-metric-forwarder:$VERSION-$CHANNEL
 
       - name: Clean up dist
         run: |
@@ -245,6 +251,16 @@ jobs:
           upload_url: ${{ github.event.release.upload_url }}
           asset_path: ./${{ steps.extract-rust-artifacts.outputs.analyzer-dispatcher }}
           asset_name: ${{ steps.extract-rust-artifacts.outputs.analyzer-dispatcher }}
+          asset_content_type: application/zip
+
+      - name: Upload metric-forwarder to Github
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ github.event.release.upload_url }}
+          asset_path: ./${{ steps.extract-rust-artifacts.outputs.metric-forwarder }}
+          asset_name: ${{ steps.extract-rust-artifacts.outputs.metric-forwarder }}
           asset_content_type: application/zip
 
   release-python-services:
