--- a/src/python/grapl_e2e_tests/Dockerfile
+++ b/src/python/grapl_e2e_tests/Dockerfile
@@ -3,7 +3,7 @@ CMD "/bin/bash"
 USER grapl
 WORKDIR /home/grapl
 COPY --chown=grapl . grapl_e2e_tests
-# Expose the `etc/` dir with all its test data in /home/grapl/local_grapl
+# Expose the `etc/` dir with all its test data in /home/grapl/etc
 COPY --from=grapl/etc-build /home/grapl/etc etc
 
 COPY --from=grapl/grapl-analyzerlib-python-build /home/grapl/venv venv
