Removing the dependency rename from grapl-graph-descriptions to graph-descriptions for libraries used by plugins: derive-dynamic-node and graph-generator-lib. This should remove the requirement that plugins would need to make the same rename in their Cargo.toml.

--- a/src/rust/derive-dynamic-node/Cargo.toml
+++ b/src/rust/derive-dynamic-node/Cargo.toml
@@ -13,7 +13,7 @@ license = "MIT"
 proc-macro = true
 
 [dependencies]
-graph-descriptions = {package="grapl-graph-descriptions", path="../graph-descriptions", version="*"}
+grapl-graph-descriptions = { path="../graph-descriptions", version="*" }
 grapl-config = {path="../grapl-config", version="*"}
 
 syn = "0.15.39"
